# imshepro-plus

./: build.gradle.kts  generate_integers.py  gradle.properties
.github/workflows/: build-apk.yml  build-debug-apk.yml  build.yml  create-grid-resources.yml  generate_integers.yml  setup-pip-resources.yml
app/: build.gradle.kts  google-services (8).json  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/anim/: live_pulse_animation.xml  live_pulse_ring_1.xml  live_pulse_ring_2.xml  live_pulse_ring_3.xml
app/src/main/res/color/: bottom_nav_colors.xml  input_stroke_color.xml  tv_tab_text_color.xml
app/src/main/res/drawable/: bottom_nav_glass_background.xml  bottom_nav_indicator_background.xml  button_hover_effect.xml  checkbox_red_selector.xml  checkbox_ripple.xml  checkbox_selector.xml  circular_logo_background.xml  ic_auto_mode.xml  ic_brightness_low.xml  ic_broadcast_live.xml  ic_category.xml  ic_clock.xml  ic_dark_mode.xml  ic_launcher_foreground.xml  ic_light_mode.xml  ic_live.xml  ic_live_indicator.xml  ic_playlist.xml  ic_theme_auto.xml  ic_theme_dark.xml  ic_theme_light.xml  ic_tv.xml  radio_button_red.xml  radio_button_selector.xml  text_select_handle_left_amber.xml  text_select_handle_right_amber.xml  theme_button_background.xml  theme_button_selected.xml  tv_tab_background.xml
app/src/main/res/layout/: activity_channel_player.xml  (+51 more)
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/layout-television/: activity_main.xml  activity_player.xml
(+118 files in other folders)
